# Embedded-Library

./: .gitignore  CMakeLists.txt  README.md  build_docs.py  config
docs/sphinx/source/: commons.rst  concepts.rst  conf.py  examples.rst  index.rst  interfaces.rst  traits.rst
examples/: CMakeLists.txt
examples/devices/: CMakeLists.txt  ssd1306.cpp
examples/gpio/: CMakeLists.txt  blinky.cpp
examples/hello_world/: CMakeLists.txt  hello_usb.cpp
examples/i2c/: CMakeLists.txt  I2C_basic_io.cpp
examples/misc/: CMakeLists.txt
examples/uart/: CMakeLists.txt  UART_basic_io.cpp
tests/: CMakeLists.txt  main.cpp
tests/commons/: test_lambada.cpp  tests_commons.cpp
